--- a/measuring/functional_data.ipynb
+++ b/measuring/functional_data.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "reported-retrieval",
+   "id": "minute-tribe",
    "metadata": {},
    "source": [
     "# Functional data\n",
     "\n",
-    "This notebook links various functional layers to ET cells across GB.\n",
+    "This notebook links various functional layers to ET cells across GB. Various methods are used based on the nature of input data, from areal interpolation to zonal statistics.\n",
     "\n",
-    "## Population estimates\n",
+    "All data are furhter measured within a relevant spatial context.\n",
+    "\n",
+    "## Population estimates\n",
     "\n",
     "Population estimates are linked using area weighted interpolation based on building geometry."
    ]
@@ -17,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loving-saying",
+   "id": "grand-earth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +28,14 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import libpysal\n",
     "import tobler\n",
     "from time import time\n",
+    "import scipy\n",
     "import xarray\n",
     "import rioxarray\n",
     "import rasterstats\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "from dask.distributed import Client, LocalCluster, as_completed\n",
     "import dask.dataframe as dd"
@@ -39,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-proposal",
+   "id": "helpful-rebel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-pension",
+   "id": "illegal-insertion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "systematic-inspector",
+   "id": "spiritual-jones",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seven-evidence",
+   "id": "thrown-oxford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interesting-address",
+   "id": "sensitive-directive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "emotional-drain",
+   "id": "appropriate-industry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,49 +111,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patient-routine",
+   "id": "periodic-photographer",
    "metadata": {},
    "source": [
     "## Night lights\n",
     "\n",
-    "Night lights are merged using zonal statistics."
+    "Night lights are merged using zonal statistics and parallelisation using `dask`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-transaction",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nl = xarray.open_rasterio(\"../../urbangrammar_samba/functional_data/employment/night_lights_osgb.tif\")\n",
-    "nl_clip = nl.rio.clip_box(*chunk.total_bounds)\n",
-    "arr = nl_clip.values\n",
-    "affine = nl_clip.rio.transform()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acoustic-policy",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time \n",
-    "stats_nl = rasterstats.zonal_stats(\n",
-    "    chunk.tessellation, \n",
-    "    raster=arr[0],\n",
-    "    affine=affine,\n",
-    "    stats=['mean'],\n",
-    "    all_touched=True,\n",
-    "    nodata = np.nan,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "current-chance",
+   "id": "retired-public",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interpreted-wonder",
+   "id": "known-thing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "obvious-congo",
+   "id": "imperial-authorization",
    "metadata": {
     "tags": []
    },
@@ -212,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinate-johnston",
+   "id": "failing-thread",
    "metadata": {},
    "source": [
     "## Worplace population by industry\n",
@@ -223,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "insured-average",
+   "id": "expanded-statistics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-minnesota",
+   "id": "annual-edgar",
    "metadata": {
     "tags": []
    },
@@ -251,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-barrier",
+   "id": "previous-wesley",
    "metadata": {},
    "source": [
     "## CORINE Land cover\n",
@@ -262,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continued-orange",
+   "id": "analyzed-mercury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instrumental-physics",
+   "id": "selected-petite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,8 +291,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-cable",
-   "metadata": {},
+   "id": "difficult-embassy",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for chunk_id in range(103):\n",
@@ -333,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increased-breakdown",
+   "id": "ideal-captain",
    "metadata": {},
    "source": [
     "## Retail centres\n",
@@ -344,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "homeless-repository",
+   "id": "complimentary-negotiation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stuck-british",
+   "id": "outside-richards",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flush-firewall",
+   "id": "objective-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earned-accused",
+   "id": "blank-mixer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amino-yield",
+   "id": "molecular-radical",
    "metadata": {},
    "source": [
     "## Water\n",
@@ -425,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rubber-lightning",
+   "id": "stylish-flush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprising-exception",
+   "id": "confused-barcelona",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +460,116 @@
     "    gdf[['hindex', 'nearest_water']].to_parquet(f'../../urbangrammar_samba/spatial_signatures/functional/water/water_{chunk}.pq')\n",
     "    \n",
     "    return f\"Chunk {chunk} processed sucessfully in {time() - s} seconds.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compound-tunnel",
+   "metadata": {},
+   "source": [
+    "## Convolutions\n",
+    "\n",
+    "Functional characters which do not express the tendency in the spatial context are contextualised using the same method applied to morphometric data - as the 1st, 2nd and 3rd quartile weigted by inverse distance based on cells within 10th order of contiguity. The metdo is applied to:\n",
+    "\n",
+    "- population\n",
+    "- night lights\n",
+    "- workplace population\n",
+    "- CORINE\n",
+    "- NDVI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "charming-hurricane",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_chunk = pd.read_parquet('../../urbangrammar_samba/spatial_signatures/cross-chunk_indices_10.pq')\n",
+    "\n",
+    "\n",
+    "def convolute(chunk_id):\n",
+    "    \n",
+    "    s = time()\n",
+    "    \n",
+    "    pop = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/population/pop_{chunk_id}\")\n",
+    "    nl = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/night_lights/nl_{chunk_id}\")\n",
+    "    workplace = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/workplace/pop_{chunk_id}\")\n",
+    "    corine = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/corine/corine_{chunk_id}.pq\")\n",
+    "    ndvi = pd.read_parquet(f\"../../urbangrammar_samba/functional_data/ndvi/ndvi_tess_{chunk_id}.pq\")\n",
+    "    combined = pop.merge(nl, on='hindex').merge(workplace, on='hindex').merge(corine, on='hindex').merge(ndvi.rename({'mean': 'ndvi'}), on='hindex')\n",
+    "    combined['keep'] = True\n",
+    "    # add neighbouring cells from other chunks\n",
+    "    cross_chunk_cells = []\n",
+    "\n",
+    "    for chunk, inds in cross_chunk.loc[chunk_id].indices.iteritems():\n",
+    "        add_pop = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/population/pop_{chunk}\").iloc[inds]\n",
+    "        add_nl = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/night_lights/nl_{chunk}\").iloc[inds]\n",
+    "        add_workplace = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/workplace/pop_{chunk}\").iloc[inds]\n",
+    "        add_corine = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/corine/corine_{chunk}.pq\").iloc[inds]\n",
+    "        add_ndvi = pd.read_parquet(f\"../../urbangrammar_samba/functional_data/ndvi/ndvi_tess_{chunk}.pq\").iloc[inds]\n",
+    "        add_combined = add_pop.merge(add_nl, on='hindex').merge(add_workplace, on='hindex').merge(add_corine, on='hindex').merge(add_ndvi.rename({'mean': 'ndvi'}), on='hindex')\n",
+    "        add_combined['keep'] = False\n",
+    "        cross_chunk_cells.append(add_combined)\n",
+    "    \n",
+    "    df = combined.append(pd.concat(cross_chunk_cells, ignore_index=True), ignore_index=True).set_index('hindex')\n",
+    "\n",
+    "    # read W\n",
+    "    W = libpysal.weights.WSP(scipy.sparse.load_npz(f\"../../urbangrammar_samba/spatial_signatures/weights/w10_10_distance_circles_{chunk_id}.npz\")).to_W()\n",
+    " \n",
+    "    characters = df.columns\n",
+    "    # prepare dictionary to store results\n",
+    "    convolutions = {}\n",
+    "    for c in characters:\n",
+    "        convolutions[c] = []\n",
+    "        \n",
+    "    # measure convolutions\n",
+    "    for i in range(len(df)):\n",
+    "        neighbours = W.neighbors[i]\n",
+    "        vicinity = df.iloc[neighbours]\n",
+    "        distance = W.weights[i]\n",
+    "        distance_decay = 1 / np.array(distance)\n",
+    "        \n",
+    "        for c in characters:\n",
+    "            values = vicinity[c].values\n",
+    "            sorter = np.argsort(values)\n",
+    "            values = values[sorter]\n",
+    "            nan_mask = np.isnan(values)\n",
+    "            if nan_mask.all():\n",
+    "                convolutions[c].append(np.array([np.nan] * 3))\n",
+    "            else:\n",
+    "                sample_weight = distance_decay[sorter][~nan_mask]\n",
+    "                weighted_quantiles = np.cumsum(sample_weight) - 0.5 * sample_weight\n",
+    "                weighted_quantiles /= np.sum(sample_weight)\n",
+    "                interpolate = np.interp([.25, .5, .75], weighted_quantiles, values[~nan_mask])\n",
+    "                convolutions[c].append(interpolate)\n",
+    "    \n",
+    "    # save convolutions to parquet file\n",
+    "    conv = pd.DataFrame(convolutions, index=df.index)\n",
+    "    exploded = pd.concat([pd.DataFrame(conv[c].to_list(), columns=[c + '_q1', c + '_q2',c + '_q3']) for c in characters], axis=1)\n",
+    "    convoluted = exploded[df.keep.values]\n",
+    "    convoluted['hindex'] = combined['hindex'].values\n",
+    "    \n",
+    "    pois = pd.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/accessibility/access_{chunk_id}.pq\")\n",
+    "    water = pd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/functional/water/water_{chunk_id}.pq')\n",
+    "    retail_centres = pd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/functional/retail_centre/retail_{chunk_id}.pq')\n",
+    "    \n",
+    "    functional = convoluted.merge(pois, on='hindex').merge(water, on='hindex').merge(retail_centres, on='hindex').set_index('hindex')\n",
+    "    functional.to_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/functional/func_{chunk_id}.pq\")\n",
+    "    \n",
+    "    return f\"Chunk {chunk_id} processed sucessfully in {time() - s} seconds.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "maritime-speech",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I am afraid that we would run out of memory if we did this in parallel\n",
+    "for i in tqdm(range(103), total=103):\n",
+    "    print(convolute(i))"
    ]
   }
  ],
