--- a/clusters/cluster_feature_importance.ipynb
+++ b/clusters/cluster_feature_importance.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "better-moore",
+   "metadata": {},
+   "source": [
+    "# Signatures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "liable-ranch",
+   "id": "damaged-captain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "challenging-tampa",
+   "id": "graphic-chemical",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "distant-indiana",
+   "id": "adjusted-election",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continental-transition",
+   "id": "moral-frontier",
    "metadata": {},
    "source": [
     "## Feature importance per cluster"
@@ -78,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "accredited-occupation",
+   "id": "underlying-information",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "digital-filling",
+   "id": "absolute-uncertainty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "piano-korean",
+   "id": "infectious-combining",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "integral-brooklyn",
+   "id": "advance-coast",
    "metadata": {
     "tags": []
    },
@@ -1755,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "mysterious-diagnosis",
+   "id": "injured-pilot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interim-vintage",
+   "id": "optional-friday",
    "metadata": {},
    "outputs": [],
    "source": []
