--- a/clusters/model_selection.ipynb
+++ b/clusters/model_selection.ipynb
@@ -499,7 +499,7 @@
     "        \n",
     "        \n",
     "        cmap = ugg.get_colormap(spsig.labels.nunique(), randomize=True)\n",
-    "        token = \"pk.eyJ1IjoibWFydGluZmxlaXMiLCJhIjoiY2tsNmhlemtxMmlicTJubXN6and5aTc2NCJ9.l7nSUXM7ZRjAWTB7oXiswQ\"\n",
+    "        token = \"\"\n",
     "        \n",
     "        ax = spsig.cx[332971:361675, 379462:404701].plot(\"labels\", figsize=(20, 20), zorder=1, linewidth=.3, edgecolor='w', alpha=1, legend=True, cmap=cmap, categorical=True)\n",
     "        ctx.add_basemap(ax, crs=27700, source=ugg.get_tiles('roads', token), zorder=2, alpha=.3)\n",
@@ -2991,7 +2991,7 @@
     "spsig = dask_dissolve(ddf, by='labels').compute().reset_index(drop=True).explode()\n",
     "\n",
     "cmap = ugg.get_colormap(spsig.labels.nunique(), randomize=True)\n",
-    "token = \"pk.eyJ1IjoibWFydGluZmxlaXMiLCJhIjoiY2tsNmhlemtxMmlicTJubXN6and5aTc2NCJ9.l7nSUXM7ZRjAWTB7oXiswQ\"\n",
+    "token = \"\"\n",
     "\n",
     "ax = spsig.cx[332971:361675, 379462:404701].plot(\"labels\", figsize=(20, 20), zorder=1, linewidth=.3, edgecolor='w', alpha=1, legend=True, cmap=cmap, categorical=True)\n",
     "ctx.add_basemap(ax, crs=27700, source=ugg.get_tiles('roads', token), zorder=2, alpha=.3)\n",
@@ -3046,7 +3046,7 @@
     "spsig = dask_dissolve(ddf, by='labels').compute().reset_index(drop=True).explode()\n",
     "\n",
     "cmap = ugg.get_colormap(spsig.labels.nunique(), randomize=True)\n",
-    "token = \"pk.eyJ1IjoibWFydGluZmxlaXMiLCJhIjoiY2tsNmhlemtxMmlicTJubXN6and5aTc2NCJ9.l7nSUXM7ZRjAWTB7oXiswQ\"\n",
+    "token = \"\"\n",
     "\n",
     "ax = spsig.cx[332971:361675, 379462:404701].plot(\"labels\", figsize=(20, 20), zorder=1, linewidth=.3, edgecolor='w', alpha=1, legend=True, cmap=cmap, categorical=True)\n",
     "ctx.add_basemap(ax, crs=27700, source=ugg.get_tiles('roads', token), zorder=2, alpha=.3)\n",
