--- a/clusters/exploration_of_signatures.ipynb
+++ b/clusters/exploration_of_signatures.ipynb
@@ -1070,7 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = \"pk.eyJ1IjoibWFydGluZmxlaXMiLCJhIjoiY2tsNmhlemtxMmlicTJubXN6and5aTc2NCJ9.l7nSUXM7ZRjAWTB7oXiswQ\"\n",
+    "token = \"\"\n",
     "\n",
     "ax = spsig.plot(\"kmeans10gb\", ax=axs['A'], zorder=1, linewidth=0, edgecolor='w', alpha=1, legend=True, cmap=cmap, categorical=True)\n",
     "# ctx.add_basemap(ax, crs=27700, source=ugg.get_tiles('roads', token), zorder=2, alpha=.3)\n",
