--- a/clusters/level2_ss.ipynb
+++ b/clusters/level2_ss.ipynb
@@ -2193,7 +2193,7 @@
     "    ddf = dask_geopandas.from_geopandas(geom.sort_values('cluster'), npartitions=64)\n",
     "    spsig = dask_dissolve(ddf, by='cluster').compute().reset_index(drop=True).explode()\n",
     "    \n",
-    "    token = \"pk.eyJ1IjoibWFydGluZmxlaXMiLCJhIjoiY2tsNmhlemtxMmlicTJubXN6and5aTc2NCJ9.l7nSUXM7ZRjAWTB7oXiswQ\"\n",
+    "    token = \"\"\n",
     "\n",
     "    ax = spsig.plot(\"cluster\", figsize=(20, 20), zorder=1, linewidth=.3, edgecolor='w', alpha=1, legend=True, cmap=cmap, categorical=True)\n",
     "    ctx.add_basemap(ax, crs=27700, source=ugg.get_tiles('roads', token), zorder=2, alpha=.3)\n",
