--- a/data_product/create_data_product.ipynb
+++ b/data_product/create_data_product.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indoor-discipline",
+   "id": "earlier-reward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "timely-methodology",
+   "id": "angry-florence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "average-tribe",
+   "id": "hydraulic-abraham",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-potato",
+   "id": "japanese-adelaide",
    "metadata": {},
    "source": [
     "## Signature geometry"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "beginning-budapest",
+   "id": "northern-religious",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "differential-python",
+   "id": "sixth-compound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "raising-spirit",
+   "id": "turkish-reform",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dangerous-story",
+   "id": "hourly-lying",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "elect-portable",
+   "id": "systematic-destiny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "hairy-environment",
+   "id": "elegant-patio",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abandoned-mambo",
+   "id": "eastern-bunch",
    "metadata": {},
    "source": [
     "### Remove Z coordinates"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ancient-brighton",
+   "id": "similar-simpson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "amateur-globe",
+   "id": "inappropriate-consequence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "satisfied-forty",
+   "id": "pharmaceutical-attention",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dietary-particular",
+   "id": "known-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "allied-kansas",
+   "id": "incorrect-subscriber",
    "metadata": {},
    "source": [
     "## Link data\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dominant-settlement",
+   "id": "entertaining-journalism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "latest-karma",
+   "id": "close-growth",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cellular-brighton",
+   "id": "devoted-terminology",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "herbal-roberts",
+   "id": "handy-castle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "proper-gentleman",
+   "id": "revised-spain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "unlikely-anthropology",
+   "id": "prescribed-analyst",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "expensive-anderson",
+   "id": "permanent-respondent",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "synthetic-pilot",
+   "id": "corresponding-procedure",
    "metadata": {},
    "source": [
     "Second bit."
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "professional-corruption",
+   "id": "imported-omega",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "twelve-leather",
+   "id": "needed-import",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "hispanic-judgment",
+   "id": "early-recall",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "offshore-deficit",
+   "id": "restricted-haiti",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-waters",
+   "id": "overhead-audio",
    "metadata": {},
    "source": [
     "Another bit"
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "married-melbourne",
+   "id": "universal-trick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "heavy-biography",
+   "id": "sunrise-confirmation",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "stainless-bones",
+   "id": "developmental-constitutional",
    "metadata": {},
    "outputs": [
     {
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "directed-thanks",
+   "id": "standing-cedar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "antique-globe",
+   "id": "undefined-introduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "temporal-proceeding",
+   "id": "incredible-findings",
    "metadata": {
     "tags": []
    },
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ambient-robert",
+   "id": "alternate-yellow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "rotary-collaboration",
+   "id": "bright-receptor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "instant-annex",
+   "id": "acquired-assault",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "portable-cricket",
+   "id": "decreased-maldives",
    "metadata": {},
    "outputs": [
     {
@@ -2501,7 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "unexpected-guide",
+   "id": "retained-attraction",
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "broken-warren",
+   "id": "featured-dublin",
    "metadata": {
     "tags": []
    },
@@ -3610,7 +3610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-priority",
+   "id": "fabulous-approval",
    "metadata": {},
    "source": [
     "## Rename columns"
@@ -3619,7 +3619,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "laughing-japan",
+   "id": "capital-stage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3746,7 +3746,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "celtic-aviation",
+   "id": "liberal-slide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3872,7 +3872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pharmaceutical-thompson",
+   "id": "liberal-exploration",
    "metadata": {},
    "source": [
     "Assing new column names"
@@ -3881,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "toxic-absolute",
+   "id": "responsible-deadline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3890,18 +3890,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "reported-glucose",
+   "execution_count": 3,
+   "id": "resistant-overview",
    "metadata": {},
    "outputs": [],
    "source": [
-    "per_type.to_csv(\"per_type.csv\")"
+    "per_type.drop(\"outlier\").to_csv(\"per_type.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "bulgarian-strap",
+   "id": "alien-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3911,7 +3911,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "amber-charm",
+   "id": "duplicate-ideal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3921,7 +3921,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "sophisticated-justice",
+   "id": "accredited-milton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3930,7 +3930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welsh-current",
+   "id": "crazy-least",
    "metadata": {},
    "source": [
     "Not needed in this notebook but it is good to have them all at one place."
@@ -3939,7 +3939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "going-afternoon",
+   "id": "african-recommendation",
    "metadata": {},
    "outputs": [],
    "source": [
