--- a/clusters/cluster_feature_importance.ipynb
+++ b/clusters/cluster_feature_importance.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "better-moore",
-   "metadata": {},
    "source": [
-    "# Signatures"
-   ]
+    "# Feature importance per signature type"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "damaged-captain",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -24,17 +20,24 @@
     "\n",
     "from matplotlib.lines import Line2D\n",
     "from sklearn.ensemble import RandomForestClassifier"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "graphic-chemical",
-   "metadata": {},
+   "source": [
+    "%time standardized_form = dask.dataframe.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/form/standardized/\").set_index('hindex')\n",
+    "%time stand_fn = dask.dataframe.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/function/standardized/\")\n",
+    "%time data = dask.dataframe.multi.concat([standardized_form, stand_fn], axis=1).replace([np.inf, -np.inf], np.nan).fillna(0)\n",
+    "%time data = data.drop(columns=[\"keep_q1\", \"keep_q2\", \"keep_q3\"])\n",
+    "%time data = data.compute()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CPU times: user 19.2 s, sys: 3.26 s, total: 22.5 s\n",
       "Wall time: 21.4 s\n",
@@ -49,20 +52,11 @@
      ]
     }
    ],
-   "source": [
-    "%time standardized_form = dask.dataframe.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/form/standardized/\").set_index('hindex')\n",
-    "%time stand_fn = dask.dataframe.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/function/standardized/\")\n",
-    "%time data = dask.dataframe.multi.concat([standardized_form, stand_fn], axis=1).replace([np.inf, -np.inf], np.nan).fillna(0)\n",
-    "%time data = data.drop(columns=[\"keep_q1\", \"keep_q2\", \"keep_q3\"])\n",
-    "%time data = data.compute()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "adjusted-election",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "labels_l1 = pd.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/KMeans10GB.pq\")\n",
     "labels_l2_9 = pd.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/clustergram_cl9_labels.pq\")\n",
@@ -73,57 +67,67 @@
     "\n",
     "outliers = [98, 93, 96, 97]\n",
     "mask = ~labels.kmeans10gb.isin(outliers)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "moral-frontier",
-   "metadata": {},
    "source": [
     "## Feature importance per cluster"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "underlying-information",
-   "metadata": {},
+   "source": [
+    "labels.kmeans10gb.unique()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([ 4,  0,  6,  1, 21,  7,  3,  5, 90, 20,  8, 22, 98, 92, 94, 91, 95,\n",
        "       96, 93, 97], dtype=int32)"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
-   "source": [
-    "labels.kmeans10gb.unique()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "absolute-uncertainty",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "imps = pd.DataFrame()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "infectious-combining",
-   "metadata": {},
+   "source": [
+    "for cluster in labels.kmeans10gb.unique():\n",
+    "    if cluster not in outliers:\n",
+    "        cluster_bool = labels.loc[mask]['kmeans10gb'].apply(lambda x: 1 if x == cluster else 0)\n",
+    "\n",
+    "        clf = RandomForestClassifier(n_estimators=10, n_jobs=-1, random_state=42, verbose=1)\n",
+    "        clf = clf.fit(data.loc[mask].values, cluster_bool.values)\n",
+    "\n",
+    "        importances = pd.Series(clf.feature_importances_, index=data.columns).sort_values(ascending=False)\n",
+    "\n",
+    "        imps[f'cluster_{cluster}'] = importances.head(50).index.values\n",
+    "        imps[f'cluster_{cluster}_vals'] = importances.head(50).values"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 16 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed: 13.6min finished\n",
@@ -160,29 +164,18 @@
      ]
     }
    ],
-   "source": [
-    "for cluster in labels.kmeans10gb.unique():\n",
-    "    if cluster not in outliers:\n",
-    "        cluster_bool = labels.loc[mask]['kmeans10gb'].apply(lambda x: 1 if x == cluster else 0)\n",
-    "\n",
-    "        clf = RandomForestClassifier(n_estimators=10, n_jobs=-1, random_state=42, verbose=1)\n",
-    "        clf = clf.fit(data.loc[mask].values, cluster_bool.values)\n",
-    "\n",
-    "        importances = pd.Series(clf.feature_importances_, index=data.columns).sort_values(ascending=False)\n",
-    "\n",
-    "        imps[f'cluster_{cluster}'] = importances.head(50).index.values\n",
-    "        imps[f'cluster_{cluster}_vals'] = importances.head(50).values"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "advance-coast",
-   "metadata": {
-    "tags": []
-   },
+   "source": [
+    "chars = [c for c in imps.columns if 'vals' not in c]\n",
+    "imps[sorted(chars)]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1750,33 +1743,29 @@
        "49                                          sdbCoA_q3  "
       ]
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 26
     }
    ],
-   "source": [
-    "chars = [c for c in imps.columns if 'vals' not in c]\n",
-    "imps[sorted(chars)]"
-   ]
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "injured-pilot",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "imps.to_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/per_cluster_importance.pq\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optional-friday",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
