--- a/measuring/inscribed_circle.ipynb
+++ b/measuring/inscribed_circle.ipynb
@@ -2,35 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sonic-border",
-   "metadata": {},
    "source": [
     "# Create inscribed circles\n",
     "\n",
-    "This notebook creates a center and a radius of a maximum inscribed circle of each enclosed tessellation cell. \n",
+    "This notebook creates a center and a radius of a maximum inscribed circle of each enclosed tessellation cell. We will need it to generate distance-based weights used to measure contextual characters.\n",
     "\n",
     "It requires custom piece of code within pygeos. Therefore, we use a custom docker container based on `docker/Dockerfile`."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "incorrect-lafayette",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from dask.distributed import Client, LocalCluster, as_completed\n",
     "from tqdm.notebook import tqdm\n",
     "from time import time"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "civil-british",
-   "metadata": {},
+   "source": [
+    "client = Client(LocalCluster())\n",
+    "client"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<table style=\"border: 2px solid white;\">\n",
@@ -57,22 +58,22 @@
        "<Client: 'tcp://127.0.0.1:44843' processes=4 threads=16, memory=134.91 GB>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "client = Client(LocalCluster())\n",
-    "client"
-   ]
+    "`pygeos.constructive.maximum_inscribed_circle` is custom function implemented in https://github.com/martinfleis/pygeos/tree/circle branch. It is likely that it will, in some form, be part of the future release of pygeos."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "representative-sapphire",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def _circle(chunk):\n",
     "    import geopandas as gpd\n",
@@ -88,17 +89,32 @@
     "    res = gpd.GeoDataFrame({'hindex': df.hindex, 'radius': lenghts}, geometry=points, crs=27700, index=df.index)\n",
     "    res.to_parquet(f'../../urbangrammar_samba/spatial_signatures/inscribed_circle/circle_{chunk}.pq')\n",
     "    return f\"Chunk {chunk} processed sucessfully in {time() - s} seconds.\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "colored-circular",
-   "metadata": {},
+   "source": [
+    "%%time\n",
+    "workers=16\n",
+    "inputs = iter(range(103))\n",
+    "futures = [client.submit(_circle, next(inputs)) for i in range(workers)]\n",
+    "ac = as_completed(futures)\n",
+    "for finished_future in ac:\n",
+    "    # submit new future \n",
+    "    try:\n",
+    "        new_future = client.submit(_circle, next(inputs))\n",
+    "        ac.add(new_future)\n",
+    "    except StopIteration:\n",
+    "        pass\n",
+    "    print(finished_future.result())"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Chunk 11 processed sucessfully in 75.18252611160278 seconds.\n",
       "Chunk 3 processed sucessfully in 79.87826347351074 seconds.\n",
@@ -208,29 +224,14 @@
      ]
     }
    ],
-   "source": [
-    "%%time\n",
-    "workers=16\n",
-    "inputs = iter(range(103))\n",
-    "futures = [client.submit(_circle, next(inputs)) for i in range(workers)]\n",
-    "ac = as_completed(futures)\n",
-    "for finished_future in ac:\n",
-    "    # submit new future \n",
-    "    try:\n",
-    "        new_future = client.submit(_circle, next(inputs))\n",
-    "        ac.add(new_future)\n",
-    "    except StopIteration:\n",
-    "        pass\n",
-    "    print(finished_future.result())"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "following-endorsement",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
